[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Effects/Textures/death.png" type="Texture" id=1]
[ext_resource path="res://src/Effects/Player Death.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Materials/xdeath_5.tres" type="Material" id=3]
[ext_resource path="res://src/Effects/Materials/xdeath_6.tres" type="Material" id=4]
[ext_resource path="res://src/Effects/Materials/xdeath_0.tres" type="Material" id=5]
[ext_resource path="res://src/Effects/Materials/xdeath_1.tres" type="Material" id=6]
[ext_resource path="res://src/Effects/Materials/xdeath_3.tres" type="Material" id=7]
[ext_resource path="res://src/Effects/Materials/xdeath_4.tres" type="Material" id=8]
[ext_resource path="res://src/Effects/Materials/xdeath_7.tres" type="Material" id=9]
[ext_resource path="res://src/Effects/Materials/xdeath_mat.tres" type="Material" id=10]
[ext_resource path="res://src/Effects/Materials/xdeath_8.tres" type="Material" id=11]

[node name="X Death Particles" type="Node2D"]
script = ExtResource( 2 )

[node name="particles2D" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 5 )
texture = ExtResource( 1 )

[node name="particles2D2" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="particles2D3" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="particles2D4" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 8 )
texture = ExtResource( 1 )

[node name="particles2D5" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="particles2D6" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 1 )

[node name="particles2D7" type="Particles2D" parent="."]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 9 )
texture = ExtResource( 1 )

[node name="particles2D8" type="Particles2D" parent="."]
material = ExtResource( 10 )
position = Vector2( 0, -1 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 11 )
texture = ExtResource( 1 )

[node name="half a second later" type="Node2D" parent="."]

[node name="particles2D" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 5 )
texture = ExtResource( 1 )

[node name="particles2D2" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="particles2D3" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="particles2D4" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 8 )
texture = ExtResource( 1 )

[node name="particles2D5" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="particles2D6" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 4 )
texture = ExtResource( 1 )

[node name="particles2D7" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 9 )
texture = ExtResource( 1 )

[node name="particles2D8" type="Particles2D" parent="half a second later"]
material = ExtResource( 10 )
position = Vector2( 0, -1 )
emitting = false
amount = 1
explosiveness = 1.0
process_material = ExtResource( 11 )
texture = ExtResource( 1 )
